# AWSTemplate-Lambda-Docker

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/shell/: build_docker_image.sh
scripts/shell/step2_create_execution_role/: create-iam-role.sh
scripts/shell/step3_create_lambda_function/: create-lambda-function.sh
src/lambda_function/: email_utils.py  main.py  visualization.py
