[tool.poetry]
name = "awstemplate-lambda-docker"
version = "0.1.0"
description = ""
authors = ["Alexey Lukyanov <alexey.a.lukyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.1.3"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
