[tool.poetry]
name = "awstemplate-lambda-docker"
version = "0.1.0"
description = ""
authors = ["Alexey Lukyanov <alexey.a.lukyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.1.3"
plotly = "5.24.1"
kaleido = "0.4.1"
urllib3 = "1.26.19"


[tool.poetry.group.dev.dependencies]
boto3 = "1.34.145"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
